objects/LLC_BI__ProductDocTab__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__DocTab__c</fullName>
        <description>This field is required. This field links this record to a DocTab record.</description>
        <label>DocTab</label>
        <referenceTo>LLC_BI__DocTab__c</referenceTo>
        <relationshipLabel>ProductDocTabs</relationshipLabel>
        <relationshipName>ProductDocTabs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <description>This field is required. This field links this record to a product.</description>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>ProductDocTabs</relationshipLabel>
        <relationshipName>ProductDocTabs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The system automatically populates this field with a unique external identifier that associates the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a unique external identifier.</inlineHelpText>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ProductDocTab</label>
    <nameField>
        <displayFormat>PDT-{00000000}</displayFormat>
        <label>Product Tab Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProductDocTabs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>